fix overflow on nav manu

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -141,6 +141,11 @@ input[type="submit"] {
     position: absolute;
     top: 0px;
     right: 10px;
+    &.overflow-visible {
+      > ul {
+        overflow: visible;
+      }
+    }
     .nav-links {
       padding: 10px;
       height: 30px;
