--- a/src/css/responsive.less
+++ b/src/css/responsive.less
@@ -58,6 +58,11 @@
       > ul {
         width: 100%;
         right: -100%;
+        > li {
+          > a {
+            font-size: 20px;
+          }
+        }
       }
       &.active {
         > ul {
@@ -78,7 +83,6 @@
     bottom: 0;
     overflow: auto;
     max-height: none !important;
-    background: #000 !important;
   }
   #dossies .dossie-list {
     display: block;
